--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ you give to every one who knows you.">
     <meta property="og:title" content="Happy Birthday Yasmin!" />
     <meta property="og:description" content="May your birthday bring you as much as you happiness
      you give to every one who knows you" />
-    <meta property="og:image" content="https://ibb.co/cvvfzcB" />
+    <meta property="og:image" content="https://i.ibb.co/CttCx5c/inbound6051816418921305263.jpg" />
     <meta property="og:url" content="https://seethinajayadileep.github.io/HBD" />
     <meta property="og:site_name" content="Happy Birthday!" />
 
@@ -60,12 +60,12 @@ you give to every one who knows you.">
     <meta name="twitter:title" content="Happy Birthday Yasmin!">
     <meta name="twitter:description" content="May your birthday bring you as much as you happiness
      you give to every one who knows you">
-    <meta name="twitter:image" content="https://ibb.co/cvvfzcB">
+    <meta name="twitter:image" content="https://i.ibb.co/CttCx5c/inbound6051816418921305263.jpg">
 
 	<meta itemprop="name" content="Happy Birthday Yasmin!">
 	<meta itemprop="description" content="May your birthday bring you as much as you happiness
 	you give to every one who knows you">
-	<meta itemprop="image" content="https://ibb.co/cvvfzcB">
+	<meta itemprop="image" content="https://i.ibb.co/CttCx5c/inbound6051816418921305263.jpg">
     
 	<style type="text/css">
         
