--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ you give to every one who knows you.">
 				<span class="space"/><span class="comments">* So I created a webpage to celebrate this special day.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Yasmin"</span>);<br />
-				<span class="comments">// also known as Yashu ,Tigee, Comrade </span><br />
+				<span class="comments">// also known as Potti ,Tigee, Comrade </span><br />
 				<span class="comments">// April 26th, when the bell rang, your age increased </span><br />
 				Date currentTime = <span class="keyword">new</span> Date(); <br />
 				SimpleDateFormat formatter = <span class="keyword">new</span> SimpleDateFormat(<span class="string">"yyyy-MM-dd HH:mm:ss"</span>);<br />
@@ -145,7 +145,7 @@ you give to every one who knows you.">
 		</div>
 		<div id="copyright">
 			<hr>
-			<p>Presented by vijay and rohit</p>
+			<p>Presented by vijay, rohit, Sindhu</p>
 		</hr>
 		</div>
 	</div>
