--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ you give to every one who knows you.">
     <meta property="og:description" content="May your birthday bring you as much as you happiness
      you give to every one who knows you" />
     <meta property="og:image" content="https://i.ibb.co/CtbxPPn/IMG-20220318-WA0009.jpg" />
-    <meta property="og:url" content="https://seethinajayadileep.github.io/HBD" />
+    <meta property="og:url" content="" />
     <meta property="og:site_name" content="Happy Birthday!" />
 
     <meta name="twitter:card" content="website">
